--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-baseurl: '' 
-url: https://mspinkymonterde.github.io/pinky-monterde
+theme: jekyll-theme-minimal
+baseurl: '/pinky-monterde'
+url: https://mspinkymonterde.github.io/
 permalink: pretty 
 
