Update baseurl and fix navigation links for consistency across pages

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: jekyll-theme-minimal
-baseurl: 'https://mspinkymonterde.github.io'
+baseurl: '/pinky-monterde'
 url: https://mspinkymonterde.github.io/
 permalink: pretty 
+
